Added API documentations

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,30 @@
 ---
-title: Welcome to Starlight
+title: e-Commerce documentation
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Find all documentation related to danaher life sciences e-commerce!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/danaher-logo.webp
   actions:
-    - text: Example Guide
+    - text: Get started
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## API documentation
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+<CardGrid>
+	<a href="/storefront/api/address-check/" class="no-underline">
+		<Card title="Intershop APIs" icon="add-document">
+			View the list of APIs available for Intershop.
+		</Card>
+	</a>
+	<a href="/inriver/api/" class="no-underline">
+		<Card title="inRiver APIs" icon="add-document">
+			View the list of APIs available for inRiver.
+		</Card>
+	</a>
 </CardGrid>
