Updated the base

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/danaher-logo.webp
   actions:
     - text: Get started
-      link: /guides/example/
+      link: guides/example/
       icon: right-arrow
 ---
 
@@ -17,12 +17,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## API documentation
 
 <CardGrid>
-	<a href="/storefront/api/address-check/" class="no-underline">
+	<a href="storefront/api/address-check/" class="no-underline">
 		<Card title="Intershop APIs" icon="add-document">
 			View the list of APIs available for Intershop.
 		</Card>
 	</a>
-	<a href="/inriver/api/" class="no-underline">
+	<a href="inriver/api/" class="no-underline">
 		<Card title="inRiver APIs" icon="add-document">
 			View the list of APIs available for inRiver.
 		</Card>
