--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: e-Commerce documentation
-description: Get started building your docs site with Starlight.
+description: Documentation related to danaher life sciences e-commerce!
 template: splash
 hero:
   tagline: Find all documentation related to danaher life sciences e-commerce!
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/danaher-logo.webp
   actions:
     - text: Get started
-      link: guides/example/
+      link: guides/documentation/
       icon: right-arrow
 ---
 
